Prevent smk panel clipping

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -346,7 +346,7 @@ mat-panel-title {
   ::ng-deep .smk-sidepanel {
     top: calc(var(--toolbar-height) + 32px) !important;
     left: 4px !important;
-    width: calc(100vw - 24px) !important;
+    width: calc(100vw - 65px) !important;
     z-index: 20 !important;
   }
 
